--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Main stylesheet (make sure css/style.css exists) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Main JS (make sure js/script.js exists) -->
-  <script src="js/script.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Skip link for accessibility -->
@@ -57,7 +57,7 @@
     <!-- HERO -->
     <section id="home" class="hero" aria-label="Hero section">
       <!-- hero image - use images/hero.png -->
-      <img src="images/hero.png" alt="Bottles of oil and sacks of flour on a rustic table" class="hero-img" loading="eager">
+      <img src="hero.png" alt="Bottles of oil and sacks of flour on a rustic table" class="hero-img" loading="eager">
       <div class="hero-overlay" aria-hidden="true"></div>
 
       <div class="container hero-content" role="region" aria-label="Intro">
@@ -111,7 +111,7 @@
           <!-- Product 1 -->
           <article class="product" tabindex="0" aria-labelledby="p1" role="listitem">
             <div class="product-media">
-              <img src="images/mustard.png" alt="Pure Mustard Oil" loading="lazy">
+              <img src="mustard.png" alt="Pure Mustard Oil" loading="lazy">
               <div class="badge">Cold-Pressed</div>
             </div>
             <div class="product-body">
@@ -127,7 +127,7 @@
           <!-- Product 2 -->
           <article class="product" tabindex="0" aria-labelledby="p2" role="listitem">
             <div class="product-media">
-              <img src="images/sunflower.png" alt="Sunflower Oil" loading="lazy">
+              <img src="sunflower.png" alt="Sunflower Oil" loading="lazy">
               <div class="badge accent-badge">Heart-Healthy</div>
             </div>
             <div class="product-body">
@@ -143,7 +143,7 @@
           <!-- Product 3 -->
           <article class="product" tabindex="0" aria-labelledby="p3" role="listitem">
             <div class="product-media">
-              <img src="images/flour.png" alt="Wheat Flour (Atta)" loading="lazy">
+              <img src="flour.png" alt="Wheat Flour (Atta)" loading="lazy">
               <div class="badge">Fresh Milled</div>
             </div>
             <div class="product-body">
@@ -159,7 +159,7 @@
           <!-- Product 4 -->
           <article class="product" tabindex="0" aria-labelledby="p4" role="listitem">
             <div class="product-media">
-              <img src="images/besan.png" alt="Besan" loading="lazy">
+              <img src="besan.png" alt="Besan" loading="lazy">
               <div class="badge">Premium</div>
             </div>
             <div class="product-body">
@@ -185,8 +185,9 @@
         </div>
         <div class="contact-info">
           <p><strong>Email:</strong> <a href="mailto:info@dsfoods.com">info@dsfoods.com</a></p>
-          <p><strong>Phone:</strong> +91-9876543210</p>
-          <p><strong>Address:</strong> DS Foods Pvt. Ltd., Jaipur, Rajasthan, India</p>
+          <p><strong>Email:</strong> <a href="mailto:dsmustard@gmail.com">info@dsfoods.com</a></p>
+          <p><strong>Phone:</strong> +91-9453468113</p>
+          <p><strong>Address:</strong> DS Foods Pvt. Ltd., Patna Rasra , Ballia , Uttar Pradesh, India</p>
         </div>
       </div>
     </section>
@@ -233,3 +234,4 @@
   </div>
 </body>
 </html>
+
