--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <figure class="about-image" aria-hidden="true">
           <!-- about image -->
-          <img src="images/flour.png" alt="Wheat flour in a bowl" loading="lazy">
+          <img src="flour.png" alt="Wheat flour in a bowl" loading="lazy">
         </figure>
       </div>
     </section>
@@ -233,5 +233,6 @@
   </div>
 </body>
 </html>
+
 
 
