--- a/index.html
+++ b/index.html
@@ -71,35 +71,53 @@
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="section about">
-      <div class="container about-grid">
-        <div class="about-card">
-          <h2>About DS Foods</h2>
-          <p>We combine traditional techniques and modern hygiene to deliver pure, nutritious food staples. Our focus is on freshness, traceability, and sustainable sourcing.</p>
+<section id="about" class="section about">
+  <div class="container about-grid">
+    <div class="about-card">
+      <h2>About DS Foods</h2>
+      <p>
+        At <strong>DS Foods</strong>, purity and quality are our promises. We bring you cold-pressed mustard oil,
+        freshly milled flour, and pure besan — made using traditional techniques blended with modern hygiene standards.
+      </p>
 
-          <ul class="features" aria-hidden="false">
-            <li>
-              <!-- icon -->
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 20c4-4 8-7 12-9 2-1 4-2 4-2s-1 2-3 4c-2 2-6 4-13 7z" fill="currentColor"/></svg>
-              Cold-pressed oils
-            </li>
-            <li>
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2l3 7h7l-5.5 4 2.5 7L12 17l-7 3 2.5-7L2 9h7z" fill="currentColor"/></svg>
-              Quality checked
-            </li>
-            <li>
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 21h16v-2H4v2zM4 3h10v12H4V3z" fill="currentColor"/></svg>
-              Hygienic packaging
-            </li>
-          </ul>
-        </div>
+      <p class="hindi">
+        हमारी <strong>D.S सरसों तेल मिल और आटा चक्की</strong> में शुद्धता और गुणवत्ता की गारंटी है। 
+        पारंपरिक विधि से निर्मित तेल और बिना किसी मिलावट का ताजा आटा – सेहत और स्वाद दोनों का ख्याल।  
+        एक रिपोर्टर द्वारा हमारी सेवा पर बनाई गई वीडियो रिपोर्ट देखने के लिए नीचे दिए गए लिंक पर क्लिक करें:
+      </p>
 
-        <figure class="about-image" aria-hidden="true">
-          <!-- about image -->
-          <img src="flour.png" alt="Wheat flour in a bowl" loading="lazy">
-        </figure>
-      </div>
-    </section>
+      <p>
+        👉 फेसबुक पर खोजें: 
+        <a href="https://www.facebook.com/search/top?q=D.S%20मस्टर्ड%20ऑइल%20मिल%20और%20आटा%20चक्की" 
+           target="_blank" rel="noopener noreferrer">
+           D.S मस्टर्ड ऑइल मिल और आटा चक्की
+        </a>  
+        <br>
+        🎥 रिपोर्ट वीडियो: <strong>14wMi21SHc</strong>
+      </p>
+
+      <ul class="features" aria-hidden="false">
+        <li>
+          <svg class="icon" viewBox="0 0 24 24"><path d="M4 20c4-4 8-7 12-9 2-1 4-2 4-2s-1 2-3 4c-2 2-6 4-13 7z" fill="currentColor"/></svg>
+          Cold-pressed oils
+        </li>
+        <li>
+          <svg class="icon" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-5.5 4 2.5 7L12 17l-7 3 2.5-7L2 9h7z" fill="currentColor"/></svg>
+          Quality checked
+        </li>
+        <li>
+          <svg class="icon" viewBox="0 0 24 24"><path d="M4 21h16v-2H4v2zM4 3h10v12H4V3z" fill="currentColor"/></svg>
+          Hygienic packaging
+        </li>
+      </ul>
+    </div>
+
+    <figure class="about-image" aria-hidden="true">
+      <img src="flour.png" alt="Wheat flour in a bowl" loading="lazy">
+    </figure>
+  </div>
+</section>
+
 
     <!-- PRODUCTS -->
     <section id="products" class="section products-section">
@@ -233,6 +251,7 @@
   </div>
 </body>
 </html>
+
 
 
 
