--- a/index.html
+++ b/index.html
@@ -227,30 +227,36 @@
       <button class="modal-close" id="modal-close" aria-label="Close">&times;</button>
       <h3 id="modal-title">Send us a message</h3>
 
-      <form id="contact-form" class="contact-form" novalidate>
-        <label>
-          <span class="label-text">Name</span>
-          <input type="text" name="name" required maxlength="80" />
-        </label>
-        <label>
-          <span class="label-text">Email</span>
-          <input type="email" name="email" required />
-        </label>
-        <label>
-          <span class="label-text">Message</span>
-          <textarea name="message" rows="4" required></textarea>
-        </label>
+      <form
+  id="contact-form"
+  class="contact-form"
+  action="https://formspree.io/f/xayz1234"
+  method="POST"
+>
+  <label>
+    <span class="label-text">Name</span>
+    <input type="text" name="name" required maxlength="80" />
+  </label>
+  <label>
+    <span class="label-text">Email</span>
+    <input type="email" name="email" required />
+  </label>
+  <label>
+    <span class="label-text">Message</span>
+    <textarea name="message" rows="4" required></textarea>
+  </label>
 
-        <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Send</button>
-          <button type="button" class="btn btn-ghost" id="modal-cancel">Cancel</button>
-        </div>
-        <div id="form-feedback" aria-live="polite" class="form-feedback"></div>
-      </form>
+  <div class="form-actions">
+    <button type="submit" class="btn btn-primary">Send</button>
+    <button type="button" class="btn btn-ghost" id="modal-cancel">Cancel</button>
+  </div>
+</form>
+
     </div>
   </div>
 </body>
 </html>
+
 
 
 
