--- a/index.html
+++ b/index.html
@@ -221,41 +221,49 @@
     </div>
   </footer>
 
-  <!-- CONTACT MODAL -->
-  <div class="modal-backdrop" id="modal" aria-hidden="true">
-    <div class="modal-window" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-      <button class="modal-close" id="modal-close" aria-label="Close">&times;</button>
-      <h3 id="modal-title">Send us a message</h3>
+<!-- CONTACT MODAL -->
+<div class="modal-backdrop" id="modal" aria-hidden="true">
+  <div class="modal-window" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+    <button class="modal-close" id="modal-close" aria-label="Close">&times;</button>
+    <h3 id="modal-title">Send us a message</h3>
 
-      <form
-  id="contact-form"
-  class="contact-form"
-  action="https://formspree.io/f/xovpogkv"
-  method="POST"
->
-  <label>
-    <span class="label-text">Name</span>
-    <input type="text" name="name" required maxlength="80" />
-  </label>
-  <label>
-    <span class="label-text">Email</span>
-    <input type="email" name="email" required />
-  </label>
-  <label>
-    <span class="label-text">Message</span>
-    <textarea name="message" rows="4" required></textarea>
-  </label>
+    <form
+      id="contact-form"
+      class="contact-form"
+      action="https://formspree.io/f/xovp"
+      method="POST"
+    >
+      <label>
+        <span class="label-text">Name</span>
+        <input type="text" name="name" id="name" required maxlength="80" />
+      </label>
 
-  <div class="form-actions">
-    <button type="submit" class="btn btn-primary">Send</button>
-    <button type="button" class="btn btn-ghost" id="modal-cancel">Cancel</button>
+      <label>
+        <span class="label-text">Email</span>
+        <input type="email" name="email" id="email" required />
+      </label>
+
+      <label>
+        <span class="label-text">Message</span>
+        <textarea name="message" id="message" rows="4" required></textarea>
+      </label>
+
+      <div class="form-actions">
+        <button type="submit" class="btn btn-primary">Send</button>
+        <button type="button" class="btn btn-ghost" id="modal-cancel">Cancel</button>
+      </div>
+
+      <!-- ✅ This is important for user feedback -->
+      <p id="form-feedback" class="form-feedback" aria-live="polite"></p>
+    </form>
   </div>
-</form>
+</div>
 
     </div>
   </div>
 </body>
 </html>
+
 
 
 
