--- a/index.html
+++ b/index.html
@@ -207,6 +207,14 @@
           <p><strong>Address:</strong> DS Foods Pvt. Ltd., Patna Rasra , Ballia , Uttar Pradesh, India</p>
         </div>
       </div>
+      <div class="map-container">
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3588.9727957732775!2d83.8025209!3d25.903264800000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3992179bbc9bc56f%3A0xac4e63e26b9f6a97!2zRC5TIOCkuOCksOCkuOCli-CkgiDgpKTgpYfgpLIg4KSu4KS_4KSyIOCklOCksCDgpIbgpJ_gpL4g4KSa4KSV4KWN4KSV4KWA!5e0!3m2!1sen!2sin!4v1762318963380!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    style="border:0;" allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
     </section>
   </main>
 
@@ -263,6 +271,7 @@
   </div>
 </body>
 </html>
+
 
 
 
